# margin-estimator

./: README.md  pyproject.toml  test.py
.github/workflows/: publish.yml
src/: margin.py
src/margin_estimator/: __init__.py  margin.py  models.py
