[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "margin-estimator"
version = "0.2"
description = "Calculate estimated margin requirements for equities options, based on CBOE margining."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Graeme Holliday", email = "graeme.holliday@pm.me"},
]
dependencies = [
    "pydantic>=2.9.2",
]

[project.urls]
Homepage = "https://github.com/tastyware/margin-estimator"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
